resume img pipeline and add tests (#22)
* init

* Update dependencies and installation instructions

* rename video train

* update script

* Update train.sh to train_video.sh and add train_img.sh

* Added matplotlib and flash_attn to requirements.txt

* Remove data-path argument from train_img.sh

* update args

* update test

* Add test for new model implementation

* Add weight initialization function and update model comparison in test_model()

* add ckpt

* update clip test

* Commented out unnecessary flags in train_img.sh script

* fix bugs

* Add transformers library to requirements.txt

* update

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,5 +18,11 @@ pytorch_lightning
 h5py
 gdown
 scikit-video
-flash_attn
 pyav
+tensorboard
+timm
+matplotlib
+accelerate
+diffusers
+transformers
+flash_attn==2.0.5
