support opensora skip (#12)
* update opensora yaml

* add shard

* update opensora skip

--- a/configs/opensora/sample.yaml
+++ b/configs/opensora/sample.yaml
@@ -22,3 +22,6 @@ prompt: [
   'Sunset over the sea.',
   'A dog in astronaut suit and sunglasses floating in space.',
 ]
+
+# speedup
+# flash_attn: True
