update config for other models (#13)

--- a/configs/opensora_plan/sample_65f_skip.yaml
+++ b/configs/opensora_plan/sample_65f_skip.yaml
@@ -21,9 +21,10 @@ enable_tiling: True
 spatial_skip: True
 spatial_threshold: 700
 spatial_gap: 3
+spatial_block: [10, 25]
 temporal_skip: True
 temporal_threshold: 700
-temporal_gap: 5
+temporal_gap: 6
 cross_skip: True
 cross_threshold: 700
-cross_gap: 5
+cross_gap: 8
