Videospeedup diffusion time step skip update (#15)
* finish opensora-plan and latte

* finish opensora

* code refine

* code refine

* final code clean

* update skip_diffusion_timestep function to handle more than 1 step skip

* update code

* polish code

* polish print

* update default value

* update verbose

---------

Co-authored-by: Jinxiaolong1129 <inxiaolong1129@gmail.com>
Co-authored-by: Xuanlei Zhao <xuanlei.zhao@gmail.com>

--- a/configs/latte/sample_skip.yaml
+++ b/configs/latte/sample_skip.yaml
@@ -45,3 +45,5 @@ temporal_gap: 4
 cross_skip: True
 cross_threshold: [80, 900]
 cross_gap: 7
+diffusion_skip: True
+diffusion_skip_timestep: [1,1,1,0,0,0,0,0,0,0]
