--- a/configs/opensora/sample_skip.yaml
+++ b/configs/opensora/sample_skip.yaml
@@ -1,4 +1,4 @@
-resolution: "720p"
+resolution: "480p"
 aspect_ratio: "9:16"
 num_frames: 48
 fps: 24
@@ -38,3 +38,7 @@ temporal_gap: 4
 cross_skip: True
 cross_threshold: [540, 960]  # 24/30
 cross_gap: 6
+
+# skip diffusion
+diffusion_skip: True
+diffusion_skip_timestep: [1,1,1,0,0,0,0,0,0,0]
