--- a/configs/opensora_plan/sample_65f_pab.yaml
+++ b/configs/opensora_plan/sample_65f_pab.yaml
@@ -25,3 +25,17 @@ fps: 24
 guidance_scale: 7.5
 num_sampling_steps: 150
 enable_tiling: True
+
+# skip
+spatial_skip: True
+spatial_threshold: [100, 800]
+spatial_gap: 2
+spatial_block: [0, 28]
+temporal_skip: True
+temporal_threshold: [100, 800]
+temporal_gap: 4
+cross_skip: True
+cross_threshold: [100, 850]
+cross_gap: 6
+# diffusion_skip: True
+# diffusion_skip_timestep: [3,3,3,0,0,0,0,0,0,0]
