--- a/evaluations/fastvideodiffusion/configs/opensora/sample_fvd.yaml
+++ b/evaluations/fastvideodiffusion/configs/opensora/sample_fvd.yaml
@@ -17,14 +17,14 @@ aes: 6.5
 flash_attn: True
 
 # fvd
-spatial_skip: True
+spatial_broadcast: True
 spatial_threshold: [540, 920]
 spatial_gap: 2
 spatial_block: [0, 28]
-temporal_skip: True
+temporal_broadcast: True
 temporal_threshold: [540, 920]
 temporal_gap: 4
-cross_skip: True
+cross_broadcast: True
 cross_threshold: [540, 920]
 cross_gap: 6
 # diffusion_skip: True
