--- a/configs/latte/sample_pab.yaml
+++ b/configs/latte/sample_pab.yaml
@@ -41,14 +41,13 @@ text_prompt: [
 ]
 
 # pab
-spatial_skip: True
+spatial_broadcast: True
 spatial_threshold: [100, 800]
 spatial_gap: 2
-spatial_block: [0, 28]
-temporal_skip: True
+temporal_broadcast: True
 temporal_threshold: [100, 800]
 temporal_gap: 4
-cross_skip: True
+cross_broadcast: True
 cross_threshold: [80, 900]
 cross_gap: 7
 # diffusion_skip: True
