--- a/evaluations/pab/configs/latte/sample_pab.yaml
+++ b/evaluations/pab/configs/latte/sample_pab.yaml
@@ -24,7 +24,7 @@ num_sampling_steps: 50
 enable_temporal_attentions: True
 enable_vae_temporal_decoder: True # use temporal vae decoder from SVD, maybe reduce the video flicker (It's not widely tested)
 
-# fvd
+# pab
 spatial_broadcast: True
 spatial_threshold: [100, 800]
 spatial_gap: 2
@@ -41,4 +41,4 @@ cross_gap: 7
 # eval
 eval: True
 eval_dataset: ./evaluations/fastvideodiffusion/datasets/webvid_selected.csv
-save_img_path: "./evaluations/fastvideodiffusion/samples/latte/sample_fvd/"
+save_img_path: "./evaluations/fastvideodiffusion/samples/latte/sample_pab/"
