update test mlp mse

--- a/configs/opensora/sample_skip.yaml
+++ b/configs/opensora/sample_skip.yaml
@@ -40,9 +40,10 @@ cross_threshold: [540, 960]  # 24/30
 cross_gap: 6
 # mlp
 mlp_skip: True
-mlp_threshold: [ 710, 760]
+mlp_threshold: [710, 760]
 mlp_gap: 1
 mlp_layer_range: [14, 15]
+mlp_skip_config: {588: [0, 2, 4], 724: [0, 2, 4], 818: [0, 2, 4]}
 
 
 # skip diffusion
