--- a/configs/opensora/sample_skip_61.yaml
+++ b/configs/opensora/sample_skip_61.yaml
@@ -43,18 +43,19 @@ cross_skip: True
 cross_threshold: [540, 960]  # 24/30
 cross_gap: 6
 # mlp
-mlp_skip: False
+mlp_skip: True
 mlp_threshold: [710, 760]
 mlp_gap: 1
 mlp_layer_range: [14, 15]
 
 mlp_skip_config: {
 496: [0, 1, 2, 3],
-588: [0, 1, 2, 3, 4],
-644: [0, 1, 2, 3, 4],
-724: [0, 1, 2, 3, 4],
-776: [0, 1, 2, 3, 4],
-820: [0, 1, 2, 3, 4]}
+544: [0, 1, 2, 3, 4, 5, 6, 7, 8],
+628: [0, 1, 2, 3, 4, 5, 6, 7, 8],
+752: [0, 1, 2, 3, 4, 5, 6, 7, 8],
+836: [0, 1, 2, 3, 4, 5, 6, 7, 8],
+776: [0, 1, 2, 3, 4, 5, 6, 7, 8]
+}
 
 
 # mlp_skip_config: {588: [0, 1, 2, 3, 4], 724: [0, 1, 2, 3, 4], 820: [0, 1, 2, 3, 4]}
