--- a/configs/opensora/sample_skip_s_t.yaml
+++ b/configs/opensora/sample_skip_s_t.yaml
@@ -57,20 +57,25 @@ mlp_layer_range: [14, 15]
 # 776: [0, 1, 2, 3, 4, 5, 6, 7, 8]}
 
 
-mlp_skip_config: {
-496: [0, 1, 2, 3],
-544: [0, 1, 2, 3, 4, 5, 6, 7, 8],
-628: [0, 1, 2, 3, 4, 5, 6, 7, 8],
-752: [0, 1, 2, 3, 4, 5, 6, 7, 8],
-836: [0, 1, 2, 3, 4, 5, 6, 7, 8],
-776: [0, 1, 2, 3, 4, 5, 6, 7, 8],
-220: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18]
+mlp_spatial_skip_config: {
+496: {'block': [0, 1, 2, 3], 'skip_count': 1},
+544: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8], 'skip_count': 1},
+628: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8], 'skip_count': 1},
+752: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8], 'skip_count': 1},
+776: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8], 'skip_count': 1},
+836: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8], 'skip_count': 1},
 }
 
 
-# mlp_skip_config: {588: [0, 1, 2, 3, 4], 724: [0, 1, 2, 3, 4], 820: [0, 1, 2, 3, 4]}
+mlp_temporal_skip_config: {
+496: {'block': [0, 1, 2, 3], 'skip_count': 1},
+544: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8], 'skip_count': 1},
+628: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8], 'skip_count': 1},
+752: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8], 'skip_count': 1},
+776: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8], 'skip_count': 1},
+836: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8], 'skip_count': 1},
+}
 
-# mlp_skip_config: {588: [0, 2, 4], 724: [0, 2, 4], 820: [0, 2, 4]}
 
 
 # skip diffusion
