--- a/configs/opensora/sample_skip_s_t_4.yaml
+++ b/configs/opensora/sample_skip_s_t_4.yaml
@@ -48,34 +48,23 @@ mlp_threshold: [710, 760]
 mlp_gap: 1
 mlp_layer_range: [14, 15]
 
-# mlp_skip_config: {
-# 496: [0, 1, 2, 3],
-# 544: [0, 1, 2, 3, 4, 5, 6, 7, 8],
-# 628: [0, 1, 2, 3, 4, 5, 6, 7, 8],
-# 752: [0, 1, 2, 3, 4, 5, 6, 7, 8],
-# 836: [0, 1, 2, 3, 4, 5, 6, 7, 8],
-# 776: [0, 1, 2, 3, 4, 5, 6, 7, 8]}
-
-
 mlp_spatial_skip_config: {
-496: {'block': [0, 1, 2, 3], 'skip_count': 1},
-544: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8], 'skip_count': 1},
-628: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8], 'skip_count': 1},
-752: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8], 'skip_count': 1},
-776: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8], 'skip_count': 1},
-836: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8], 'skip_count': 1},
+496: {'block': [0, 1, 2, 3], 'skip_count': 3},
+544: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13], 'skip_count': 2},
+628: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13], 'skip_count': 2},
+752: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13], 'skip_count': 2},
+776: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13], 'skip_count': 2},
+836: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13], 'skip_count': 2},
 }
 
 
 mlp_temporal_skip_config: {
-496: {'block': [0, 1, 2, 3], 'skip_count': 1},
-544: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8], 'skip_count': 1},
-628: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8], 'skip_count': 1},
-752: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8], 'skip_count': 1},
-776: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8], 'skip_count': 1},
-836: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8], 'skip_count': 1},
+496: {'block': [0, 1, 2, 3], 'skip_count': 3},
+664: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13], 'skip_count': 2},
+776: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13], 'skip_count': 2},
+856: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13], 'skip_count': 2},
+916: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13], 'skip_count': 2},
 }
-
 
 
 # skip diffusion
