--- a/configs/latte/sample_skip_s_t.yaml
+++ b/configs/latte/sample_skip_s_t.yaml
@@ -47,3 +47,24 @@ cross_threshold: [80, 900]
 cross_gap: 7
 diffusion_skip: True
 diffusion_skip_timestep: [1,1,1,0,0,0,0,0,0,0]
+
+
+# skip
+mlp_spatial_skip_config: {
+900: {'block': [0, 1, 2, 3], 'skip_count': 4},
+720: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+640: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+560: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+480: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+400: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+}
+
+
+mlp_temporal_skip_config: {
+900: {'block': [0, 1, 2, 3], 'skip_count': 4},
+720: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+640: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+560: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+480: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+400: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+}
