--- a/configs/opensora/sample_skip.yaml
+++ b/configs/opensora/sample_skip.yaml
@@ -42,26 +42,7 @@ temporal_gap: 4
 cross_skip: True
 cross_threshold: [540, 960]  # 24/30
 cross_gap: 6
-# mlp
-mlp_skip: False
-mlp_threshold: [710, 760]
-mlp_gap: 1
-mlp_layer_range: [14, 15]
-
-mlp_skip_config: {
-496: [0, 1, 2, 3],
-588: [0, 1, 2, 3, 4],
-644: [0, 1, 2, 3, 4],
-724: [0, 1, 2, 3, 4],
-776: [0, 1, 2, 3, 4],
-820: [0, 1, 2, 3, 4]}
-
-
-# mlp_skip_config: {588: [0, 1, 2, 3, 4], 724: [0, 1, 2, 3, 4], 820: [0, 1, 2, 3, 4]}
-
-# mlp_skip_config: {588: [0, 2, 4], 724: [0, 2, 4], 820: [0, 2, 4]}
-
 
 # skip diffusion
-diffusion_skip: True
+diffusion_skip: False
 diffusion_skip_timestep: [1,1,1,0,0,0,0,0,0,0]
