--- a/configs/opensora_plan/sample_65f_skip_s_t.yaml
+++ b/configs/opensora_plan/sample_65f_skip_s_t.yaml
@@ -37,3 +37,39 @@ cross_gap: 6
 diffusion_skip: False
 diffusion_skip_timestep: [3,3,3,0,0,0,0,0,0,0]
 # open-sora plan 150 steps, so we can skip more
+
+
+
+# mlp
+mlp_skip: False
+
+mlp_spatial_skip_config: {
+810: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+630: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+570: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+480: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+300: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+}
+
+
+mlp_temporal_skip_config: {
+810: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+630: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+570: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+480: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+300: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+}
+
+
+# Time step tensor([894, 891, 891, 888, 888, 885, 885, 882, 882, 879, 879, 876, 876, 870,
+#         864, 858, 852, 846, 840, 834, 828, 822, 816, 810, 804, 798, 792, 786,
+#         780, 774, 768, 762, 756, 750, 744, 738, 732, 726, 720, 714, 708, 702,
+#         696, 690, 684, 678, 672, 666, 660, 654, 648, 642, 636, 630, 624, 618,
+#         612, 606, 600, 594, 588, 582, 576, 570, 564, 558, 552, 546, 540, 534,
+#         528, 522, 516, 510, 504, 498, 492, 486, 480, 474, 468, 462, 456, 450,
+#         444, 438, 432, 426, 420, 414, 408, 402, 396, 390, 384, 378, 372, 366,
+#         360, 354, 348, 342, 336, 330, 324, 318, 312, 306, 300, 294, 288, 282,
+#         276, 270, 264, 258, 252, 246, 240, 234, 228, 222, 216, 210, 204, 198,
+#         192, 186, 180, 174, 168, 162, 156, 150, 144, 138, 132, 126, 120, 114,
+#         108, 102,  96,  90,  84,  78,  72,  66,  60,  54,  48,  42,  36,  30,
+#          24,  18,  12,   6,   0], device='cuda:0')
