--- a/configs/opensora/sample.yaml
+++ b/configs/opensora/sample.yaml
@@ -1,6 +1,6 @@
-resolution: "480p"
-aspect_ratio: "9:16"
-num_frames: 51
+resolution: "480p"   # 240p, 360p, 480p, 720p
+aspect_ratio: "9:16" # 9:16, 16:9, 3:4, 4:3, 1:1
+num_frames: 102      # 51 (2s), 102 (4s), 204 (8s), 408 (16s)
 fps: 24
 frame_interval: 1
 
