--- a/configs/opensora_plan/sample_65f_skip_s_t_7.yaml
+++ b/configs/opensora_plan/sample_65f_skip_s_t_7.yaml
@@ -44,40 +44,54 @@ diffusion_skip_timestep: [3,3,3,0,0,0,0,0,0,0]
 mlp_skip: True
 
 mlp_spatial_skip_config: {
-738: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
-714: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
-690: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
-666: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
-642: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
-618: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
-594: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
-570: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
-546: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
-522: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
-498: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
-474: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
-450: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
-426: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
+738: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+714: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+690: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+666: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+642: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+618: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+594: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+570: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+546: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+522: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+498: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+474: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+450: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+426: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+402: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+378: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+354: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+330: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+282: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+258: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+234: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
 }
+
+
 
 mlp_temporal_skip_config: {
-738: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
-714: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
-690: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
-666: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
-642: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
-618: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
-594: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
-570: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
-546: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
-522: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
-498: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
-474: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
-450: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
-426: {'block': [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], 'skip_count': 2},
+738: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+714: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+690: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+666: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+642: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+618: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+594: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+570: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+546: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+522: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+498: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+474: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+450: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+426: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+402: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+378: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+354: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+330: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+282: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+258: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
+234: {'block': [0, 1, 2, 3, 4, 5, 6, 7], 'skip_count': 2},
 }
-
-
 
 
 
