--- a/configs/latte/sample_skip_s_t.yaml
+++ b/configs/latte/sample_skip_s_t.yaml
@@ -45,26 +45,24 @@ temporal_gap: 4
 cross_skip: True
 cross_threshold: [80, 900]
 cross_gap: 7
-# diffusion_skip: True
-# diffusion_skip_timestep: [1,1,1,0,0,0,0,0,0,0]
 
 
 # skip
 mlp_skip: True
 
 mlp_spatial_skip_config: {
-720: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
-640: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
-560: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
-480: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
-400: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+720: {'block': [0, 1, 2, 3, 4], 'skip_count': 2},
+640: {'block': [0, 1, 2, 3, 4], 'skip_count': 2},
+560: {'block': [0, 1, 2, 3, 4], 'skip_count': 2},
+480: {'block': [0, 1, 2, 3, 4], 'skip_count': 2},
+400: {'block': [0, 1, 2, 3, 4], 'skip_count': 2},
 }
 
 
 mlp_temporal_skip_config: {
-720: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
-640: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
-560: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
-480: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
-400: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+720: {'block': [0, 1, 2, 3, 4], 'skip_count': 2},
+640: {'block': [0, 1, 2, 3, 4], 'skip_count': 2},
+560: {'block': [0, 1, 2, 3, 4], 'skip_count': 2},
+480: {'block': [0, 1, 2, 3, 4], 'skip_count': 2},
+400: {'block': [0, 1, 2, 3, 4], 'skip_count': 2},
 }
