implement mlp broadcast (#150)
* init commit (#3)

* update diffusion

* polish

* update structure

* embed

* update ref

* update ref

* udpate opensora init

* remove

* update

* update name

* fix v1

* update ignore

* update stdit2

* update v2 infer

* support v2 infer

* update script

* polish code

* update script

* update script and rename

* fix cross

* update code for temporal and cross

* update base script

* remove layernorm for infer

* update

* add readme (#4)

* update default setting (#5)

* Spatial attention (#6)

* update prompt

* update spatial

* update code control

* Merge (#7)

* update diffusion

* polish

* update structure

* embed

* update ref

* update ref

* udpate opensora init

* remove

* update

* update name

* fix v1

* update ignore

* update stdit2

* update v2 infer

* support v2 infer

* update script

* polish code

* update script

* update script and rename

* fix cross

* fix some bugs

* optimize attn

* add latte

* update

* update opensora sample

* remove useless arg

* Update save_dir path in opensora sample configs

* update test

* seed

* update opensora plan

* update opensora plan

* update yaml

* remove useless

* update opensora plan

* update doc

* update script

* update data

* update code

* update usage

* update

* add attn skip for latte and opensoraplan (#8)

* add block

* fix

* update latte

* update

* add latte args (#9)

* fix latte argparse (#10)

* add kw

* fix arg

* add eval

* update ignore

* Opensorav1.2 (#11)

* add opensorav1.2

* update final

* udpate mgr

* support opensora skip (#12)

* update opensora yaml

* add shard

* update opensora skip

* update config for other models (#13)

* finish opensora-plan and latte

* Sp (#14)

* update latte shard

* rename arg

* update license


--- a/configs/opensora_plan/sample_65f_pab.yaml
+++ b/configs/opensora_plan/sample_65f_pab.yaml
@@ -38,3 +38,54 @@ cross_threshold: [100, 850]
 cross_gap: 6
 # diffusion_skip: True
 # diffusion_skip_timestep: [3,3,3,0,0,0,0,0,0,0]
+
+
+# mlp
+mlp_skip: True
+
+mlp_spatial_skip_config: {
+738: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+714: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+690: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+666: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+642: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+618: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+594: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+570: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+546: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+522: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+498: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+474: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+450: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+426: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+}
+
+mlp_temporal_skip_config: {
+738: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+714: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+690: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+666: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+642: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+618: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+594: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+570: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+546: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+522: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+498: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+474: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+450: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+426: {'block': [0, 1, 2, 3, 4, 5, 6], 'skip_count': 2},
+}
+
+# Time step tensor([894, 891, 891, 888, 888, 885, 885, 882, 882, 879, 879, 876, 876, 870,
+#         864, 858, 852, 846, 840, 834, 828, 822, 816, 810, 804, 798, 792, 786,
+#         780, 774, 768, 762, 756, 750, 744, 738, 732, 726, 720, 714, 708, 702,
+#         696, 690, 684, 678, 672, 666, 660, 654, 648, 642, 636, 630, 624, 618,
+#         612, 606, 600, 594, 588, 582, 576, 570, 564, 558, 552, 546, 540, 534,
+#         528, 522, 516, 510, 504, 498, 492, 486, 480, 474, 468, 462, 456, 450,
+#         444, 438, 432, 426, 420, 414, 408, 402, 396, 390, 384, 378, 372, 366,
+#         360, 354, 348, 342, 336, 330, 324, 318, 312, 306, 300, 294, 288, 282,
+#         276, 270, 264, 258, 252, 246, 240, 234, 228, 222, 216, 210, 204, 198,
+#         192, 186, 180, 174, 168, 162, 156, 150, 144, 138, 132, 126, 120, 114,
+#         108, 102,  96,  90,  84,  78,  72,  66,  60,  54,  48,  42,  36,  30,
+#          24,  18,  12,   6,   0], device='cuda:0')
