--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,22 @@
-numpy
-tqdm
-psutil
-packaging
-pre-commit
-rich
 click
-fabric
+colossalai
 contexttimer
-ninja
-torch>=1.13
-safetensors
+diffusers
 einops
+fabric
+imageio
+imageio-ffmpeg
+matplotlib
+ninja
+numpy
+omegaconf
+packaging
+psutil
 pydantic
 ray
-protobuf
-gdown
-pyav
-tensorboard
+rich
+safetensors
 timm
-matplotlib
-accelerate
-diffusers
+torch>=1.13
+tqdm
 transformers
-colossalai
