--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+bs4
 click
 colossalai
 contexttimer
@@ -17,7 +18,8 @@ pydantic
 ray
 rich
 safetensors
+sentencepiece
 timm
 torch>=1.13
 tqdm
-transformers
+transformers==4.39.3
