--- a/examples/training/open_sora/configs/benchmarks/bench_base.yaml
+++ b/examples/training/open_sora/configs/benchmarks/bench_base.yaml
@@ -8,6 +8,8 @@ alloc_memory_fraction: 0.65
 dynamic_sp: false
 dynamic_recompute: false
 auto_grad_accumulation: false
+dummy_dataset: true
+dummy_data_size: 1000
 
 
 # ==== training config ====
@@ -27,8 +29,8 @@ plugin: "zero2"
 seed: 42
 wandb: false
 epochs: 1
-log_every: 0
-ckpt_every: 0
+log_every: 1e10
+ckpt_every: 1e10
 
 # optimization
 grad_clip: 1.0
