--- a/examples/training/open_sora/configs/benchmarks/bench_base.yaml
+++ b/examples/training/open_sora/configs/benchmarks/bench_base.yaml
@@ -1,35 +1,42 @@
+image_mixing_frac: 5
+zipf_offset: 5
+sp_size: 4
+outputs: exp/baseline
+profile_path: exp/profile/baseline
+verbose: true
+alloc_memory_fraction: 0.65
+dynamic_sp: false
+dynamic_recompute: false
+auto_grad_accumulation: false
+dummy_dataset: true
+dummy_data_size: 1000
+
+
+# ==== training config ====
+
 # preprocess embedding
 data_path: "./assets/example_data/demo_preprocess.csv"
 preprocessed_data: true
-# not preprocess embedding
-# data_path: "./assets/example_data/demo.csv"
-# preprocessed_data: false
 
 # train
 ckpt_path: "hpcai-tech/OpenSora-STDiT-v3"
-profile_path: exp/profile
 grad_checkpoint: True
 num_workers: 8
 dtype: "bf16"
 plugin: "zero2"
 
-# data centric parallel
-alloc_memory_fraction: 0.65  # if communication(nccl) error, try to decrease this value
-dynamic_sp: true
-# dynamic_recompute: true
-# auto_grad_accumulation: true
-
 # log
 seed: 42
-wandb: true
-epochs: 10
-log_every: 1
-ckpt_every: 100
+wandb: false
+epochs: 1
+log_every: 1e10
+ckpt_every: 1e10
 
 # optimization
 grad_clip: 1.0
 lr: 1e-4
 ema_decay: 0.99
+adam_eps: 1e-15
 warmup_steps: 10
 
 # data
