--- a/examples/training/open_sora/configs/train.yaml
+++ b/examples/training/open_sora/configs/train.yaml
@@ -14,10 +14,10 @@ plugin: "zero2"
 
 # log
 seed: 42
-# wandb: true
-# epochs: 10
+wandb: true
+epochs: 10
 log_every: 1
-ckpt_every: 100000
+ckpt_every: 100
 
 # optimization
 grad_clip: 1.0
@@ -35,14 +35,6 @@ bucket_config:
   "480p": {1: [1.0, 32], 51: [1.0, 4], 102: [1.0, 2], 204: [1.0, 1], 408: [1.0, 1]}
   "720p": {1: [1.0, 14], 51: [1.0, 1], 102: [1.0, 1], 204: [1.0, 1], 408: [1.0, 1]}
   "1080p": {1: [1.0, 5], 51: [1.0, 1], 102: [1.0, 1], 204: [1.0, 1], 408: [1.0, 1]}
-
-# bucket_config:
-#   "144p": {1: [1.0, 345], 51: [1.0, 48]}
-#   "240p": {1: [1.0, 128], 51: [1.0, 16]}
-#   "360p": {1: [1.0, 64]}
-#   "480p": {1: [1.0, 32]}
-#   "720p": {1: [1.0, 14]}
-#   "1080p": {1: [1.0, 5]}
 
 # mask
 mask_ratios: {
